hphp/hack/test/typecheck/class_refinements/abstract_typeconst_bound_impl_2.php.exp
File "abstract_typeconst_bound_impl_2.php", line 22, characters 14-15:
Unable to satisfy constraint on this type constant (Typing[4110])
  File "abstract_typeconst_bound_impl_2.php", line 8, characters 29-78:
  Expected a class with `{type TUserData = UserDataA}`
  File "abstract_typeconst_bound_impl_2.php", line 22, characters 19-23:
  But got `UserB`
  File "abstract_typeconst_bound_impl_2.php", line 23, characters 26-34:
  This `as` or `=` refinement constraint is violated
  File "abstract_typeconst_bound_impl_2.php", line 23, characters 26-34:
  Expected `UserDataA`
  File "abstract_typeconst_bound_impl_2.php", line 8, characters 63-77:
    resulting from expanding the type constant `this::TUserData`
  File "abstract_typeconst_bound_impl_2.php", line 27, characters 26-34:
  But got `UserDataB`
